# pbrt

./: .gitignore  Cargo.toml  README.md  TODO.md  completed.json
.github/workflows/: rust.yml
git-hooks/: README.md  pre-commit
pbrt-bin/: Cargo.toml
pbrt-bin/src/: main.rs
scenes/: check-sphere.pbrt  paramset-lookup.pbrt
scripts/: generate_paramset_frag.py  generate_testutils.py  insert.py  insert.sh  paramset.py
src/: lib.rs  main.rs
src/core/: api.rs  api_test.rs  error.rs  fileutil.rs  film.rs  filter.rs  floatfile.rs  geometry.rs  imageio.rs  interaction.rs  light.rs  medium.rs  mipmap.rs  mod.rs  parallel.rs  paramset.rs  parser.rs  pbrt-parser.pest  pbrt.rs  rng.rs  sampling.rs  sobolmatrices.rs  spectrum.rs  texture.rs  transform.rs
src/core/geometry/: bounds.rs  normal.rs  point.rs  vector.rs
src/core/paramset/: testutils.rs
src/core/testdata/: bad1.floats  big.floats  good.floats  scene1.pbrt
src/filters/: box.rs  boxfilter.rs  mod.rs
src/lights/: infinite.rs  mod.rs
src/textures/: constant.rs  mod.rs
tests/: integration.rs  textures.rs
tests/core/: error.rs  mod.rs
