[package]
authors = ["Bill Thiede <rust@xinu.tv>"]
description = "Rust implementation of https://pbrt.org/"
edition = "2018"
license = "Apache-2.0"
name = "pbrt"
readme = "README.md"
repository = "https://github.com/wathiede/pbrt"
version = "0.1.6-alpha.0"
[dependencies]
log = "0.4.21"
image = "0.25.1"
regex = "1.10.4"
structopt = "0.3.26"
thiserror = "1.0.57"
stderrlog = "0.5.4"
anyhow = "1.0.82"
memmap = "0.7.0"
lazy_static = "1.4.0"
assert_approx_eq = "1.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
rayon = "1.9.0"
tempfile = "3.10.1"

[features]
float-as-double = []
sampled-spectrum = []
