[package]
authors = ["Bill Thiede <rust@xinu.tv>"]
description = "Rust implementation of https://pbrt.org/"
edition = "2018"
license = "Apache-2.0"
name = "pbrt"
readme = "README.md"
repository = "https://github.com/wathiede/pbrt"
version = "0.1.6-alpha.0"
[dependencies]
log = "0.4.22"
image = "0.25.2"
regex = "1.11.0"
structopt = "0.3.26"
stderrlog = "0.6.0"
thiserror = "1.0.63"
anyhow = "1.0.86"
memmap = "0.7.0"
lazy_static = "1.5.0"
assert_approx_eq = "1.1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rayon = "1.10.0"
tempfile = "3.13.0"

[features]
float-as-double = []
sampled-spectrum = []
