[package]
authors = ["Bill Thiede <rust@xinu.tv>"]
description = "Rust implementation of https://pbrt.org/"
edition = "2018"
license = "Apache-2.0"
name = "pbrt"
readme = "README.md"
repository = "https://github.com/wathiede/pbrt"
version = "0.1.6-alpha.0"
[dependencies]
log = "0.4.26"
stderrlog = "0.6.0"
thiserror = "2.0.11"
memmap = "0.7.0"
lazy_static = "1.5.0"
png = "0.17.16"
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
pretty_assertions = "1.4.1"
tempfile = "3.17.1"

[features]
float-as-double = []
sampled-spectrum = []
